// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Products endpoint Should create a product 1`] = `
Object {
  "config": Object {
    "adapter": [Function],
    "baseURL": "http://localhost:5003",
    "data": "{\\"name\\":\\"Pants\\",\\"code\\":\\"5zxqb\\"}",
    "env": Object {
      "FormData": [Function],
    },
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "transitional": Object {
      "clarifyTimeoutError": false,
      "forcedJSONParsing": true,
      "silentJSONParsing": true,
    },
    "url": "products",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Object {
    "attachments": Array [],
    "category": null,
    "code": "5zxqb",
    "description": null,
    "details": Array [],
    "id": 2,
    "images": Array [],
    "mainVariant": null,
    "name": "Pants",
    "price": null,
    "producer": null,
    "rating": null,
    "relatedProducts": Array [],
    "tags": Array [],
    "variants": Array [],
  },
  "headers": Object {
    "content-type": "application/json; charset=utf-8",
  },
  "request": XMLHttpRequest {},
  "status": 201,
  "statusText": "Created",
}
`;

exports[`Products endpoint Should get many products 1`] = `
Object {
  "config": Object {
    "adapter": [Function],
    "baseURL": "http://localhost:5003",
    "data": undefined,
    "env": Object {
      "FormData": [Function],
    },
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "get",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "transitional": Object {
      "clarifyTimeoutError": false,
      "forcedJSONParsing": true,
      "silentJSONParsing": true,
    },
    "url": "products",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Array [
    Object {
      "attachments": Array [],
      "category": null,
      "code": "5zxqb",
      "description": null,
      "details": Array [],
      "id": 2,
      "images": Array [],
      "mainVariant": null,
      "name": "Pants",
      "price": null,
      "producer": null,
      "rating": null,
      "relatedProducts": Array [],
      "tags": Array [],
      "variants": Array [],
    },
    Object {
      "attachments": Array [],
      "category": null,
      "code": "5zxqb",
      "description": null,
      "details": Array [],
      "id": 1,
      "images": Array [],
      "mainVariant": null,
      "name": "Pants",
      "price": null,
      "producer": null,
      "rating": null,
      "relatedProducts": Array [],
      "tags": Array [],
      "variants": Array [],
    },
    Object {
      "attachments": Array [],
      "category": null,
      "code": "4oxj0n",
      "description": null,
      "details": Array [],
      "id": 3,
      "images": Array [],
      "mainVariant": null,
      "name": "Table",
      "price": null,
      "producer": null,
      "rating": null,
      "relatedProducts": Array [],
      "tags": Array [],
      "variants": Array [],
    },
    Object {
      "attachments": Array [],
      "category": null,
      "code": "8hvumm",
      "description": null,
      "details": Array [],
      "id": 4,
      "images": Array [],
      "mainVariant": null,
      "name": "Shirt",
      "price": null,
      "producer": null,
      "rating": null,
      "relatedProducts": Array [],
      "tags": Array [],
      "variants": Array [],
    },
    Object {
      "attachments": Array [],
      "category": null,
      "code": "4chhsi",
      "description": null,
      "details": Array [],
      "id": 5,
      "images": Array [],
      "mainVariant": null,
      "name": "Pizza",
      "price": null,
      "producer": null,
      "rating": null,
      "relatedProducts": Array [],
      "tags": Array [],
      "variants": Array [],
    },
    Object {
      "attachments": Array [],
      "category": null,
      "code": "i44m11",
      "description": null,
      "details": Array [],
      "id": 6,
      "images": Array [],
      "mainVariant": null,
      "name": "Towels",
      "price": null,
      "producer": null,
      "rating": null,
      "relatedProducts": Array [],
      "tags": Array [],
      "variants": Array [],
    },
    Object {
      "attachments": Array [],
      "category": null,
      "code": "cm9u1k",
      "description": null,
      "details": Array [],
      "id": 7,
      "images": Array [],
      "mainVariant": null,
      "name": "Chicken",
      "price": null,
      "producer": null,
      "rating": null,
      "relatedProducts": Array [],
      "tags": Array [],
      "variants": Array [],
    },
  ],
  "headers": Object {
    "content-type": "application/json; charset=utf-8",
  },
  "request": XMLHttpRequest {},
  "status": 200,
  "statusText": "OK",
}
`;
